--- a/src/Components/Sidebar/styles.css
+++ b/src/Components/Sidebar/styles.css
@@ -44,6 +44,6 @@ display: flex;
 gap: 15px;
 width: 70%;
 }
-.nav-link:focus, .nav-link:hover{
+.nav-link:focus, .nav-link:hover, .nav-link:active{
     color: #FF5151;
 }
