--- a/src/Pages/styles.css
+++ b/src/Pages/styles.css
@@ -191,6 +191,11 @@
     line-height: 24px;
     color: #303030;
 }
+.content_para button{
+    border: 0;
+    background: transparent;
+    margin-left: 15px;
+}
 
 #content_people {
     font-family: 'Roboto';
@@ -237,6 +242,7 @@
     width: 80px;
     height: 40px;
 }
+
 .genderInput{
     display: flex;
     flex-direction: column;
