--- a/src/Pages/Schedule/style.css
+++ b/src/Pages/Schedule/style.css
@@ -88,11 +88,7 @@ button {
  
 
  .content_para button {
-    border: 1px solid black;
-    background: chartreuse;
-    
-    border-radius: 100px;
-    width: 1.5rem;
+    border: 0
 }
 
 .employezone {
@@ -159,13 +155,12 @@ button {
     color: #ffc107;
     font-family: "Raleway";
     font-weight: 500;
-    padding: 10px 16px;
+    line-height: 20px;
     text-decoration: none;
     display: block;
-    margin-bottom: 0;
+    margin: 0;
     cursor: pointer;
     font-size: 14px;
-    margin-top: 21px;
   }
   
   .dropdown-content p:hover {
@@ -180,26 +175,103 @@ button {
   .dropdown:hover .dropdown-content {
     display: block;
   }
-  
-  span {
-    margin-left: 1rem;
+  .left{
+    width: 24px;
+  }
+  .left span {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
     border: 1px solid black;
     background: cadetblue;
     border-radius: 5px;
-    margin-right: 10px;
     cursor: pointer;
   }
   .employedetails {
     display: flex;
     align-items: center;
+    padding: 10px;
     width: 17rem;
-    
     border: 1px solid yellow;
-    height: 15vh;
+    height: 70px;
     justify-content: space-between;
     
   }
 
   span:hover {
     background-color: #ffc107;
+  }
+
+  .slots{
+    margin: 20px 0 20px 0;
+  }
+  .slots button{
+    width: 20px;
+    height: 24px;
+  }
+  #shift{
+    background-color: #FFEFE7;
+    border-radius: 5px;
+    width: 126px;
+    height: 40px;
+    font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
+  }
+  .shiftsAdd{
+    margin-top: 50px;
+  }
+
+  #minusBtn{
+    font-size: 20px;
+    border: 0.5px solid;
+    width: 27px;
+    border-radius: 26px;
+  }
+
+  .upper{
+    width: 90%;
+  }
+  .lower{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .editableDiv{
+    display: flex;
+    align-items: flex-end;
+    justify-content: space-between;
+    margin-bottom:20px
+  }
+  .editableDiv label{
+    color: #e3540d;
+  }
+  .editableContent{
+    display: flex;
+    flex-direction: column;
+  }
+  .editableContent {
+    position: relative;
+  }
+  
+  .editableContent span {
+    display: inline-block;
+    transition: 0.3s;
+  }
+  
+  .editableContent input {
+    transition: 0.3s;
+    border: none;
+    background: transparent;
+  }
+  
+  .editableContent:hover span,
+  .editableContent:hover input {
+    border-radius: 10px;
+    padding-left:15px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    border: none;
+    background: #FFEFE7;
   }
